[gd_scene load_steps=2 format=3 uid="uid://c5qxvk8m3yxkd"]

[ext_resource type="Script" path="res://_ui/dev_console_ui.gd" id="1_console"]

[node name="DevConsoleUI" type="CanvasLayer"]
layer = 100
script = ExtResource("1_console")

[node name="Panel" type="PanelContainer" parent="."]
visible = false
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 300.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="HistoryLabel" type="RichTextLabel" parent="Panel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true
selection_enabled = true

[node name="InputContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Prompt" type="Label" parent="Panel/VBoxContainer/InputContainer"]
layout_mode = 2
text = ">"

[node name="InputLine" type="LineEdit" parent="Panel/VBoxContainer/InputContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter command..."
caret_blink = true

[node name="SuggestionsPopup" type="PanelContainer" parent="Panel/VBoxContainer/InputContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="SuggestionsList" type="ItemList" parent="Panel/VBoxContainer/InputContainer/SuggestionsPopup"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
max_text_lines = 5
